Ensure tracks table covers the bottom of the screen

--- a/packages/front/src/Tracks.css
+++ b/packages/front/src/Tracks.css
@@ -184,7 +184,7 @@
 
   /*Replace the calc below. Currently it is calculated as height of preview + height of status bar + height of table header + height of the button row at the end of the table*/
   .tracks-table > tbody {
-    height: calc(100vh - 280px);
+    height: calc(100vh - 133px);
   }
 
   .cart-bar {
@@ -376,7 +376,7 @@
 
   /*Replace the calc below. Currently it is calculated as height of preview + height of status bar + height of table header + height of the button row at the end of the table*/
   .tracks-table > tbody {
-    height: calc(100vh - 270px);
+    height: calc(100vh - 171px);
   }
 
   .table-cell-button-row > .table-cell-button:not(:first-child),
